--- a/TeachFlow/Templates/base.html
+++ b/TeachFlow/Templates/base.html
@@ -89,6 +89,7 @@
 
 <script src="https://unpkg.com/lucide@latest" defer></script>
 <script src="{% static 'js/delete_student_modal.js' %}" defer></script>
+<script src="{% static 'js/filters.js' %}"></script>
 <script>
     window.addEventListener("DOMContentLoaded", () => {
         lucide.createIcons();
