fix: mundaça unificando arquivo JS

--- a/TeachFlow/Templates/exercises/exercise_form.html
+++ b/TeachFlow/Templates/exercises/exercise_form.html
@@ -244,5 +244,5 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="{% static 'js/exerciseForm.js' %}"></script>
+<script src="{% static 'js/forms.js' %}"></script>
 {% endblock %}
