fix: mudança unificando arquivo JS

--- a/TeachFlow/Templates/lessons/lesson_form.html
+++ b/TeachFlow/Templates/lessons/lesson_form.html
@@ -260,5 +260,5 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="{% static 'js/lessonForm.js' %}"></script>
+<script src="{% static 'js/forms.js' %}"></script>
 {% endblock %}
