--- a/TeachFlow/Templates/students/student_form.html
+++ b/TeachFlow/Templates/students/student_form.html
@@ -12,7 +12,7 @@
   </p>
 
   <form method="post" class="space-y-6"
-      action="{% if form.instance.pk %}{% url 'student_update' class_group.id form.instance.pk %}{% else %}{% url 'student_create' class_group.id %}{% endif %}">
+      action="{% if form.instance.pk %}{% url 'student_form' class_group.id form.instance.pk %}{% else %}{% url 'student_form' class_group.id %}{% endif %}">
 
     {% csrf_token %}
 
@@ -69,7 +69,7 @@
       {% for student in students %}
       <li id="student-row-{{ student.id }}" class="py-4 flex items-center justify-between">
           <div>
-            <a href="{% url 'student_update' class_group.id student.id %}" class="text-sm font-medium text-blue-600 hover:underline">
+            <a href="{% url 'student_form' class_group.id student.id %}" class="text-sm font-medium text-blue-600 hover:underline">
                 {{ student.first_name }} {{ student.last_name }}
             </a>              
             <p class="text-xs text-gray-500">{{ student.notes|default:"Sem observações." }}</p>
@@ -78,7 +78,7 @@
             <span class="text-sm {% if student.is_active %}text-green-600{% else %}text-red-500{% endif %} font-medium">
               {% if student.is_active %}Ativo{% else %}Inativo{% endif %}
             </span>
-            <a href="{% url 'student_update' class_group.id student.id %}"
+            <a href="{% url 'student_form' class_group.id student.id %}"
             class="text-blue-500 hover:text-blue-700 text-sm flex items-center space-x-1">
             <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" fill="none" stroke="currentColor"
                 viewBox="0 0 24 24"><path d="M12 20h9"/><path d="M16.5 3.5a2.121 2.121 0 1 1 3 3L7 19l-4 1 1-4Z"/></svg>
